--- a/zoonotion/src/pages/Profiles.css
+++ b/zoonotion/src/pages/Profiles.css
@@ -1,5 +1,7 @@
 .profile-page-container {
-  background-color: #dedede;
+  /* background-color: #dedede; */
+  /* background-color: #F4F6F8; */
+  background-image: url('/public/assets/Background2.png');
   min-height: 100vh;
   padding: 40px 0;
 }
