merapikan halaman admin

--- a/zoonotion/src/pages/EducationAves.css
+++ b/zoonotion/src/pages/EducationAves.css
@@ -1,6 +1,6 @@
 /* EDUCATION AVES SIMPLIFIED CSS */
 .education-category-page {
-  background-color: #f9fafb;
+  background-color: #F4F6F8;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
